@@ -1,4 +1,4 @@
-version 0.7202
+version 0.7203
 ==================================
 
 Provides the same version objects as included in Perl v5.9.x (and in the
@@ -10,7 +10,7 @@ in the core).  If you are testing 5.9.x, you must check out bleadperl in
 order to get the current changes (the CPAN release has no effect in
 bleadperl).
 
-Major changes in 0.7202 - 2007-04-17
+Major changes in 0.7203 - 2007-04-17
 =====================================
 
 Default stringification for numeric versions is the same string as was
