@@ -3,7 +3,7 @@ use strict;
 
 use locale;
 use vars qw ($VERSION @ISA @REGEXS);
-$VERSION = 0.7202;
+$VERSION = 0.7203;
 
 push @REGEXS, qr/
 	^v?	# optional leading 'v'
@@ -441,7 +441,6 @@ sub _un_vstring {
     my $value = shift;
     # may be a v-string
     if ( $] >= 5.006_000 && length($value) >= 3 && $value !~ /[._]/ ) {
-	$DB::single = 1;
 	my $tvalue = sprintf("v%vd",$value);
 	if ( $tvalue =~ /^v\d+\.\d+\.\d+$/ ) {
 	    # must be a v-string
